# faythe

./: .gitignore  .gitlab-ci.yml  Cargo.nix  Cargo.toml  README.md  config.json  crate-hashes.json  flake.nix  shell.nix
nix/: sources.json
src/: README.md  common.rs  config.rs  dns.rs  exec.rs  file.rs  issuer.rs  kube.rs  log.rs  main.rs  metrics.rs  monitor.rs  nsupdate.rs  vault.rs
test/: expired.pem  longlived.pem
