[package]
name = "faythe"
version = "0.1.0"
authors = ["Johan Thomsen <jth@dbc.dk>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
custom_error = "1.7.1"
x509-parser = "0.6.0"
base64 = "0.10.1"
time = "0.1.42"
acme-lib = { git = 'https://github.com/DBCDK/acme-lib', branch = 'v0.5.2-reqwest' }
regex = "1.3.4"
lazy_static = "1.4.0"
