[package]
name = "faythe"
version = "0.1.0"
authors = ["Johan Thomsen <jth@dbc.dk>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
openssl = "0.10.28"
base64 = "0.10.1"
time = "0.1.42"
acme-lib = { git = 'https://github.com/DBCDK/acme-lib', branch = 'v0.5.2-reqwest' }
regex = "1.3.4"
lazy_static = "1.4.0"
walkdir = "2.3"
trust-dns-resolver = "0.19"

