[package]
name = "faythe"
version = "0.1.0"
authors = ["Johan Thomsen <jth@dbc.dk>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
openssl = "0.10.28"
base64 = "0.10.1"
time = "0.1.42"
acme-lib = { git = 'https://github.com/DBCDK/acme-lib', branch = 'v0.8.1-reqwest' }
regex = "1.3.4"
lazy_static = "1.4.0"
walkdir = "2.3"
trust-dns-resolver = "0.19"
env_logger = "0.7.1"
prometheus_exporter_base = { version = "1.0", features = ["hyper_server"] }
tokio = { version = "0.2", features = [ "macros" ] }
dbc-rust-modules = { git = "https://github.com/dbcdk/rust-modules", branch = "main" }
reqwest = { version = "0.11", features = [ "blocking" ] }
vaultrs = "0.6"
vaultrs-login = "0.1"
url = "2"
chrono = "0.4"
num-traits = "0.2"

